--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ authors = ["Alec Wang <asw15@sfu.ca>"]
 python = "^3.8"
 Django = "^3.2.9"
 django-tailwind = "^2.2.2"
+python-dotenv = "^0.19.2"
+pytest-django = "4.4.0"
+pytest = "^6.2.5"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
