finished test features

--- a/ticket_viewer/.env-template
+++ b/ticket_viewer/.env-template
@@ -1,3 +1,5 @@
+# remove the word template from this file when you're done
+
 ZENDESK_URL= #required
 ZENDESK_USER= #required
 ZENDESK_PASSWORD= #required
