--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: poetry run python manage.py runserver 0.0.0.0:8000
     volumes:
       - '.:/usr/src/app'
     ports:
